# piia-engram

./: .coveragerc  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  LICENSE  NOTICE  PRIVACY.md  README.md  README.zh-CN.md  RELEASE_NOTES_v3.10.0.md  RELEASE_NOTES_v3.10.1.md  RELEASE_NOTES_v3.11.0.md  RELEASE_NOTES_v3.11.2.md  RELEASE_NOTES_v3.5.1.md  RELEASE_NOTES_v3.6.0.md  RELEASE_NOTES_v3.7.0.md  RELEASE_NOTES_v3.8.0.md  RELEASE_NOTES_v3.9.0.md  SECURITY.md  glama.json  glama.yaml  install.ps1  install.sh  pyproject.toml  smithery.yaml
.claude-plugin/: plugin.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  setup_problem.md
.github/workflows/: ci.yml  guard-strategic-files.yml  publish.yml  test.yml
.mcp/: server.json
assets/xiaohongshu/: generate_xiaohongshu_images.py
demos/: cross_tool_demo.py  setup_engram.py
docs/: architecture.md  comparison.md  cross-tool-guide.md  release-playbook.md
examples/: claude_mcp.example.json
examples/engram/: schema_version.example.json
examples/engram/identity/: preferences.example.json  profile.example.json  quality_standards.example.json  trust_boundaries.example.json
examples/engram/knowledge/: decisions.example.json  domains.example.json  lessons.example.json
examples/engram/projects/: example_project.json
experiments/: REPORT.md  __init__.py
experiments/benchmarks/: REPORT.md  __init__.py  llm_judge.py  rule_based_judge.py  run_benchmark.py  scenarios.py  test_benchmark.py  test_classify_line.py
experiments/benchmarks/round10_retrieval_quality/: REPORT.md  fixtures.py  llm_judge.py  results_raw.jsonl  results_t1.json  results_t2.json  run_round10.py  test_d2_token_budget.py  (+6 more)
experiments/coordinator/: __init__.py  high_level_actions.py  test_high_level_actions.py
experiments/dynamic_loading/: __init__.py  test_server.py
experiments/memory_audit/: README.md  cc_self_test_seed.json  claude_code_self_test_plan.md  codex_unit_seed.json  cross_ai_codex_seed.json  cross_ai_test_plan.md
experiments/router/: __init__.py  router_tool.py  test_router_tool.py
experiments/verification/: post_rename_check.md
scripts/: auto_inject_resume_brief.py  auto_save_on_stop.py  metrics.py  release_sanitize_check.py
src/engram_core/: __init__.py  audit.py  compat.py  context.py  core.py  crypto.py  mcp_server.py  reconcile.py  reports.py  reports_identity.py  retrieval.py  setup_wizard.py  stats.py  storage.py  telemetry.py
src/piia_engram/: __init__.py  beta_tracker.py  compat.py  context.py  contexts.py  core.py  i18n.py  mcp_server.py  reconcile.py  reports_analytics.py  reports_identity.py  reports_rarity.py  reports_review.py  retrieval.py  setup_wizard.py  stats.py  storage.py  telemetry.py
tests/: conftest.py  test_audit.py  test_backcompat_engram_core.py  test_beta_tracker.py  test_contexts.py  test_core.py  test_crypto.py  test_daily_log_v3_30.py  test_heartbeat_v3_30.py  test_mcp_coverage.py  test_mcp_tools.py  test_optimizations_v3294.py  test_packaging.py  test_postcompact_hook.py  test_reconcile.py  test_resume_brief_v3_30.py  test_review_page_xss.py  test_setup_wizard.py  test_stats.py  test_storage.py  test_telemetry.py  test_unclean_exit_v3_30.py
worker/: schema.sql  wrangler.toml
worker/src/: index.js
(+120 files in other folders)
