[project]
name = "engram"
version = "2.7.0"
description = "Engram — AI 记忆印记。你的 AI 记忆，本地存储，跨工具共享。"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "portalocker>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
