[project]
name = "piia-engram"
version = "3.12.0"
description = "Engram — Your AI identity layer. Stores who you are, not just what you did. Local-first, MCP-compatible."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Engram Contributors"},
]
keywords = ["ai", "identity", "mcp", "memory", "personal-knowledge", "llm", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "portalocker>=2.0",
]

[project.urls]
Homepage = "https://github.com/Patdolitse/engram"
Repository = "https://github.com/Patdolitse/engram"
"Bug Tracker" = "https://github.com/Patdolitse/engram/issues"

[project.scripts]
engram = "engram_core.setup_wizard:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tomli>=2.0; python_version < \"3.11\"",
]
remote = [
    "uvicorn>=0.20",
]
secure = [
    "cryptography>=41.0",
]
all = [
    "uvicorn>=0.20",
    "cryptography>=41.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
